Grace/tests/gibbs/errors/t070.grace
// ERROR = P1023
method madeOf(arg) {}

def substance = "Awesome"

var x is madeOf(substance : String)
